<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <!--Je n'ai pas su faire-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_gravity="right">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="190dp"
            android:layout_height="67dp"
            android:hint="@string/prenom" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="190dp"
            android:layout_height="78dp"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valide" />

    <Button
        android:id="@+id/Annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annule" />

</RelativeLayout>